// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KibanaPageTemplate render basic template 1`] = `
<div
  class="euiPageTemplate kbnPageTemplate emotion-euiPageOuter-row-grow"
  style="min-block-size:calc(100vh - var(--kbnAppHeadersOffset, var(--euiFixedHeadersOffset, 0)));padding-block-start:0"
>
  <main
    class="emotion-euiPageInner"
    id="EuiPageTemplateInner_generated-id"
  >
    <header
      class="euiPageHeader emotion-euiPageHeader-l-border"
      title="test"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent-l"
        style="max-width:1200px"
      >
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
          >
            <div
              class="euiText emotion-euiText-constrainedWidth-m"
            >
              <p>
                test
              </p>
            </div>
          </div>
          <div
            class="euiFlexGroup emotion-euiFlexGroup-wrap-l-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
            >
              test
            </div>
          </div>
        </div>
      </div>
    </header>
    <div>
      Child element
    </div>
  </main>
</div>
`;

exports[`KibanaPageTemplate render noDataConfig && solutionNav 1`] = `
<WithSolutionNavBar(NoDataConfigPage)
  noDataConfig={
    Object {
      "action": Object {
        "elasticAgent": Object {},
      },
      "docsLink": "test",
      "solution": "Elastic",
    }
  }
  solutionNav={
    Object {
      "icon": "logoKibana",
      "items": Array [
        Object {
          "id": "1",
          "items": Array [
            Object {
              "id": "1.1",
              "name": "Ingest Node Pipelines",
            },
            Object {
              "id": "1.2",
              "name": "Logstash Pipelines",
            },
            Object {
              "id": "1.3",
              "name": "Beats Central Management",
            },
          ],
          "name": "Ingest",
        },
        Object {
          "id": "2",
          "items": Array [
            Object {
              "id": "2.1",
              "name": "Index Management",
            },
            Object {
              "id": "2.2",
              "name": "Index Lifecycle Policies",
            },
            Object {
              "id": "2.3",
              "name": "Snapshot and Restore",
            },
          ],
          "name": "Data",
        },
      ],
      "name": "Kibana",
    }
  }
/>
`;

exports[`KibanaPageTemplate render noDataConfig 1`] = `
<NoDataConfigPage
  noDataConfig={
    Object {
      "action": Object {
        "elasticAgent": Object {},
      },
      "docsLink": "test",
      "solution": "Elastic",
    }
  }
/>
`;

exports[`KibanaPageTemplate render solutionNav 1`] = `
<WithSolutionNavBar(KibanaPageTemplateInner)
  pageHeader={
    Object {
      "description": "test",
      "iconType": "test",
      "rightSideItems": Array [
        "test",
      ],
      "title": "test",
    }
  }
  solutionNav={
    Object {
      "icon": "logoKibana",
      "items": Array [
        Object {
          "id": "1",
          "items": Array [
            Object {
              "id": "1.1",
              "name": "Ingest Node Pipelines",
            },
            Object {
              "id": "1.2",
              "name": "Logstash Pipelines",
            },
            Object {
              "id": "1.3",
              "name": "Beats Central Management",
            },
          ],
          "name": "Ingest",
        },
        Object {
          "id": "2",
          "items": Array [
            Object {
              "id": "2.1",
              "name": "Index Management",
            },
            Object {
              "id": "2.2",
              "name": "Index Lifecycle Policies",
            },
            Object {
              "id": "2.3",
              "name": "Snapshot and Restore",
            },
          ],
          "name": "Data",
        },
      ],
      "name": "Kibana",
    }
  }
>
  <div>
    Child element
  </div>
</WithSolutionNavBar(KibanaPageTemplateInner)>
`;
